# mcp-nta

./: .env.template  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
mcp_nta/: __init__.py  __main__.py  models.py  realtime.py  server.py  static_data.py  util.py
mcp_nta/tools/: __init__.py  nearby_stops.py  route_stops.py  search_routes.py  search_stops.py  service_alerts.py  stop_departures.py  track_route.py  vehicle_positions.py
